fix overflow css

--- a/frontend/src/modules/knowledge-lib/style.scss
+++ b/frontend/src/modules/knowledge-lib/style.scss
@@ -277,6 +277,7 @@
     background-color: rgb(249, 250, 251);
     padding-top: 15px;
     padding-bottom: 15px;
+    overflow-x: hidden;
     .topic-view-container {
       padding: 0px 20px;
       margin-top: 20px;
